# perplexity-claude-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
skills/: perplexity_computer_skill.md
src/perplexity_claude_agent/: __init__.py  cli.py  permissions.py  registry.py  server.py  session.py  skill_template.py
tests/: __init__.py  conftest.py  test_permissions.py  test_registry.py  test_server.py  test_session.py
