[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexity-claude-agent"
version = "0.1.0"
description = "Give Perplexity Computer a 21st agent — your local Claude Code with full filesystem access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raghu", email = "raghu@example.com" }
]
keywords = [
    "perplexity",
    "claude",
    "mcp",
    "agent",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "mcp[cli]>=1.0.0",
    "click>=8.0",
    "pydantic>=2.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/0xRaghu/perplexity-claude-agent"
Repository = "https://github.com/0xRaghu/perplexity-claude-agent"
Issues = "https://github.com/0xRaghu/perplexity-claude-agent/issues"

[project.scripts]
perplexity-claude-agent = "perplexity_claude_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/perplexity_claude_agent"]
